 - The name property is removed from the syntax items in the bundle editor to better work with the Language Grammar bundle
 - Support for background colors in themes
 - Bundle key bindings from project tree
 - Changed how txmt url prefix is handled. Changed to more robust JavaScript solution instead of html stream replacement

Features
 - Command bundle items now supports changing of output type through exit codes
 - Last open windows and files are restored upon startup
 - Detect external changes to open files
 - Dialog system to be available from bundles. Includes so far, CommitDialog, error, progress, simplenotification,
   html.InsertEntity and subversion.RevisionSelector
 - Git and subversion status on files are shown as colors in the project view
 - File encoding changed to utf-8
 - TextMate.system javascript support in HTML output for command bundle items

Bugfixes
 - NPE whith new tabs created by bundles
 - Lots of bugfixes to make sure the subversion bundle works almost completely



Build 2010112501
------------------------------------------------------------------------------------------------------------------------

Improvements
 - First version of threaded parsing
 - Removed 2mb file size limit and increased max allocated memory to allow for bigger files
 - Changed formatting of language syntax files as being edited in the bundle editor

Bugfixes
 - Keystroke incorrectly saved in bundle editor on windows
 - Fixed exception when closing all tabs at once
 - Fixed major bug with tab and enter when having multiple windows active
 - Fixed incorrect syntax highlighting in ruby. Problem by contentName and backreferences in the end pattern
 - Couldn't edit (save) not bundle item files in bundles



Build 2010111701
------------------------------------------------------------------------------------------------------------------------

Features

Improvements
 - Install bundles dialog now shows bundles sorted alphabetically