@@ -1,13 +1,14 @@
 package kkckkc.utils.plist;
 
+import kkckkc.utils.io.FileUtils;
+
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 
 public class GeneralPListReader implements PListReader {
 
 	public Object read(File file) throws IOException {
-		byte[] dest = readBytes(file);
+		byte[] dest = FileUtils.readBytes(file);
 
 		if (dest[0] == (byte) 'b' && dest[1] == (byte) 'p') {
 			return new NIOBinaryPListReader().read(dest);
@@ -19,17 +20,6 @@ public class GeneralPListReader implements PListReader {
 	}
 
 
-	private byte[] readBytes(File file) throws IOException {
-		FileInputStream fis = new FileInputStream(file);
-        try {
-            byte[] dest = new byte[fis.available()];
-            fis.read(dest);
-            fis.close();
 
-            return dest;
-        } finally {
-            fis.close();
-        }
-    }
 
 }
