@@ -7,6 +7,7 @@ Improvements
  - Support for background colors in themes
  - Bundle key bindings from project tree
  - Changed how txmt url prefix is handled. Changed to more robust JavaScript solution instead of html stream replacement
+ - Shebang lines with multiple arguments in support scripts are now handled on Linux and Windows.
 
 Features
  - Command bundle items now supports changing of output type through exit codes
